changement de couleur de titre

--- a/assets/css/cakeMyDay.css
+++ b/assets/css/cakeMyDay.css
@@ -33,7 +33,7 @@ header {
 }
 
 h1 {
-    background-color: #b934a2;
+    background-color: #d8a9d0;
     color: white;
     font-weight: 300;
     font-size: larger;
